--- a/main.css
+++ b/main.css
@@ -179,6 +179,7 @@ i{
     width: 40%;
     left: 50%;
     top: 10%;
+    color: #EAEAEA;
     font-size: 15px;
     font-family: 'Oleo Script', cursive;
     top: 15%;
