--- a/main.css
+++ b/main.css
@@ -183,6 +183,8 @@ i{
     font-size: 15px;
     font-family: 'Oleo Script', cursive;
     top: 15%;
+    margin-right: 70px !important;
+    right: 0;
       margin: auto;
       display: block;
 }
@@ -196,7 +198,7 @@ i{
     position: relative;
     display: block;
     top: 25%;
-    margin-left: 45px !important;
+    margin-left: 70px !important;
       margin: auto;
       display: block;
 
