--- a/main.css
+++ b/main.css
@@ -1,3 +1,16 @@
+html{
+    scroll-behavior: smooth;
+}
+#check{
+    display: none;
+}
+#ch{
+    font-size: 30px;
+    color: red;
+    line-height: 50px;
+    float: left;
+    display: none;
+}
 #menu{
     background-color: #EAEAEA;
     position: fixed;
@@ -7,6 +20,16 @@
     top: 0;
     left: 0;
 }
+ul{
+    list-style: none;
+    top: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    padding-inline-start: 0px;
+
+}
 a{
     text-decoration: none;
 }
@@ -14,40 +37,45 @@ a{
     position: relative;
     color: #252A34;
     font-size: 22px;
-    margin-top: -128px;
-    margin-left: -4px;
+    padding: 0 20px 0 20px;
+    border-right: 2px solid #252A34;
+    font-family: 'Oleo Script', cursive;
+    float: left;
+}
+#menu a:hover{
+    transition: 750ms;
+    background-color: rgba(37, 42, 52);
+    color:#EAEAEA; 
+}
+#menu ul li{
+    float: left;
+}
+#menu ul li >a{
+    position: relative;
+    color: #252A34;
+    font-size: 22px;
     padding: 0 20px 0 20px;
     border-right: 2px solid #252A34;
     font-family: 'Oleo Script', cursive;
 }
-#menu >a:hover{
+#menu i:hover{
     transition: 750ms;
     background-color: rgba(37, 42, 52);
     color:#EAEAEA; 
 }
-#menu >div>a>i:hover{
-    transition: 750ms;
-    background-color: rgba(37, 42, 52);
-    color:#EAEAEA; 
-}
-#menu >div>i:hover{
-    transition: 750ms;
-    background-color: rgba(37, 42, 52);
-    color:#EAEAEA; 
-}
-#menu > div{
+#menu ul> div{
     position: fixed;
     top: 0;
     right: 0;
     height: 100%;
 }
-#menu > div> a{
+#menu ul> div> a{
     font-size: 30px;
     width: 100%;
     margin: 0 5px 0 5px;
     color: #252A34;
 }
-#menu div >div{
+#menu ul div >div{
     width: 0;
     height: 0;
     border-color: transparent transparent #EAEAEA transparent;
@@ -90,9 +118,6 @@ a{
 #menu div >div:hover ~ span{
     display: block;
 }
-#menu div >span:hover ~ div{
-    display: block;
-}
 #menu div >span:hover{
     display: block;
 }
@@ -107,7 +132,8 @@ i{
     top: 0;
     background-image:  linear-gradient(to top right,rgba(37, 42, 52,0.4),rgba(255, 46, 99,0.4) ),url("bg.jpg");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: auto 120%;
+    background-position: center;
 }
 #anasyf h1{
     position: relative;
@@ -150,14 +176,12 @@ i{
 #icerik a div img{
     width: 100%;
 }
-
 #icerik a div h1{
     font-size: 75%;
     font-weight: bold;
     color: #EAEAEA;
     font-family: 'Oleo Script', cursive;
 }
-
 #icerik a div p{
     font-size: 80%;
     margin-bottom: 0;
@@ -203,4 +227,78 @@ i{
       display: block;
 
 }
-html{scroll-behavior: smooth;}
+@media(max-width:600px){
+    #menu{
+        height: 45px;
+    }
+    #menu a{
+        font-size: 200%;
+        border: 0px;
+    }
+    #menu a:hover{
+        transition: 750ms;
+        background-color: #EAEAEA ;
+        color:rgb(37, 42, 52); 
+    }
+    #ch{
+        font-size: 30px;
+        color: red;
+        line-height: 50px;
+        float: right;
+        margin-right: 15px;
+        display: block;
+    }
+    ul{
+        position: absolute;
+        width: 100%;
+        top: 100%;
+        left: -100%;
+        height: calc(100vh - 40px);
+        background-color: #252A34;
+        transition: all 500ms;
+    }
+    ul li {
+        width: 100%;
+        text-align: center;
+        margin: 20px 0 20px 0;
+    }
+    #menu ul li >a{
+        position: relative;
+        color: #EAEAEA;
+        font-size: 45px;
+        padding: 0 20px 0 20px;
+        border-right: 0px;
+        font-family: 'Oleo Script', cursive;
+    }
+    #menu ul >div{
+        position: absolute;
+        top: 50%;
+        width: 100%;
+        height: 40px;
+    }
+    #menu ul div >a{
+        position:relative;
+        bottom: 0;    
+        display: block;
+        text-align: center;
+    }
+    #menu ul div i{
+        position: relative;
+        font-size: 50px;
+        display: block;
+        text-align: center;
+        color: #EAEAEA;
+        margin-top: 15px;
+    }
+    #menu ul div >i{
+        position: relative;
+        font-size: 40px;
+        display: block;
+        margin-left: 15px;
+        text-align: center;
+        color: #EAEAEA;
+    }
+    #check:checked ~ ul{
+        left: 0;
+    }
+}
