--- a/main.css
+++ b/main.css
@@ -223,9 +223,6 @@ i{
     display: block;
     top: 25%;
     margin-left: 70px !important;
-      margin: auto;
-      display: block;
-
 }
 @media(max-width:600px){
     #menu{
@@ -300,5 +297,88 @@ i{
     }
     #check:checked ~ ul{
         left: 0;
+    }
+    #menu>ul>li>a:focus #menu>ul{
+        display: none;
+    }
+    #anasyf h1{
+        position: relative;
+        font-size: 40px;
+        width: 90%;
+        top: 25%;
+        margin-left:5%
+    }
+    #anasyf h2{
+        position: relative;
+        font-size: 30px;
+        top: 35%;
+        width: 90%;
+        margin-left:5%
+    }
+    #icerik{
+        position: absolute;
+        height: 300vh;
+        width: 100%;
+        left: 0;
+        top: 100%;
+        background-image:  linear-gradient(to top right,#252A34,#FF2E63);
+        background-repeat: no-repeat;
+        background-size: 100%;
+    }
+    #icerik >a> div{
+        position: relative;
+        float: left;
+        width: 90%;
+        height: 40vh;
+        margin: 9vh 5% 0 5%;
+        box-shadow: 15px 15px 25px 0 black;
+        background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0));
+        overflow: hidden;
+    }
+    #icerik a div img{
+        width: 100%;
+    }
+    #icerik a div h1{
+        font-size: 80%;
+        font-weight: bold;
+        color: #EAEAEA;
+        text-align: center;
+        font-family: 'Oleo Script', cursive;
+    }
+    #icerik a div p{
+        font-size: 75%;
+        margin-bottom: 0;
+        color: #EAEAEA;
+        font-family: 'Oleo Script', cursive;
+    }
+    #hkmd{
+    position: absolute;
+    height: 150vh;
+    width: 100%;
+    left: 0;
+    top: 400%;
+    background-image:  linear-gradient(to bottom right,#252A34,#FF2E63);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+    #hkmd p{
+        position: relative;
+        width: 90%;
+        left: 5%;
+        top: 8%;
+        color: #EAEAEA;
+        font-size:1.87vh;
+        font-family: 'Oleo Script', cursive;
+    }
+    #hkmd img{
+        width: 90%;
+        border: 5px;
+        border-top-right-radius: 50px;
+        border-bottom-left-radius: 50px;
+        border-top-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        position: relative;
+        top: 5%;
+        margin:0 5% 0 5% !important;
     }
 }
